type constraints, docs

--- a/dist.ini
+++ b/dist.ini
@@ -18,8 +18,10 @@ repository.type = git
 [Prereqs]
 Moose = 2.000002
 Scalar::Util = 0
+Catalyst = 5.90020
 
 [Prereqs / TestRequires]
 Test::Most = 0
 Catalyst = 5.90103
 HTTP::Request::Common = 0
+Type::Tiny = 1.000005
